# rpgpdf2txt

./: .env  .gitignore  AUDIT.md  PROJECT_RULES.md  README.md  deploiement.py  deploy.py  main.py  pyproject.toml  requirements.txt  rpgpdf2text.db  run_local.sh  update_deploy.py
.agents/rules/: character.md  rpgpdf2txt.md
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  security.py
app/db/: database.py  models.py
app/routes/: api_routes.py  auth_routes.py  deps.py  view_routes.py
app/services/: extractor_job.py  hf_corrector.py  pdf_extractor.py  webhook.py
app/static/js/: admin.js  dashboard.js  extraction.js  history.js  login.js  preferences.js
app/templates/: admin.html  base.html  cache.html  dashboard.html  extraction.html  history.html  login.html  preferences.html  register.html  setup.html
config/: deploy.yaml  nginx_rpgpdf2txt.conf  rpgpdf2txt.service
data/users/jchodorowski_at_gmail_com/: 20260226_102334_cpt_Farmer.txt  20260226_104857_scd_Brandt.txt  20260226_105644_cpt_Farmer.txt
doc/: ARCHITECTURE.md  DEPLOIEMENT.md  DESCRIPTION.md  LICENSE.md
tests/: test_config.py  test_db.py
